collapse container correction on mobile

--- a/src/components/Collapse/_collapse.scss
+++ b/src/components/Collapse/_collapse.scss
@@ -60,4 +60,9 @@
   #equipments-collapse {
     max-width: none;
   }
+
+  .collapse-container {
+    padding-right: 0;
+    padding-left: 0;
+  }
 }
